# viaggiatreno-api

./: .gitignore  README.md  biome.jsonc  package.json  pyproject.toml  stations.csv
.github/: copilot-instructions.md
api/: utils.py  wrapper.py
cli/: main.py
dumps/: autocompletaStazione.csv  autocompletaStazioneImpostaViaggio.csv  autocompletaStazioneNTS.csv  cercaStazione.json  elencoStazioni.json
schemas/: andamentoTreno.schema.json  arrivi.schema.json  cercaNumeroTreno.schema.json  cercaStazione.schema.json  dettaglioStazione.schema.json  elencoStazioni.schema.json  partenze.schema.json  statistiche.schema.json
scripts/: compare.py  is_null.py  viaggiatreno-api.py
src/: api.js  cli.js  config.js  index.js  resolvers.js  utils.js
src/commands/: dump.js  index.js  journey.js  regions.js  schedules.js  stations.js  statistics.js  trains.js
src/viaggiatreno_api/: main.py
