[project]
name = "viaggiatreno-api"
version = "0.1.0"
readme = "README.md"
authors = [
    { name = "Matteo Delton", email = "deltonmatteo@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "requests>=2.32.4",
]

[project.scripts]
vt-api = "viaggiatreno_api.main:cli"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"
